--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./" />
+    <meta http-equiv="refresh" content="0; url=/index.html" />
   </head>
   <body>
     <p>Redirecting...</p>
